Refactoring for KafkaAdmin